--- a/packages/deploy/package.json
+++ b/packages/deploy/package.json
@@ -67,9 +67,9 @@
         "eslint-plugin-mocha": "^10.1.0",
         "eslint-plugin-prettier": "^4.2.1",
         "ethers": "5",
-        "hardhat": "~2.15.0",
+        "hardhat": "^2.19.0",
         "hardhat-contract-sizer": "^2.10.0",
-        "hardhat-deploy": "^0.10.5",
+        "hardhat-deploy": "^0.11.43",
         "prettier": "^2.8.8",
         "prettier-plugin-solidity": "^1.1.3",
         "ts-node": "^10.9.1",
