Update: outline docs site for The Sandbox docs w/ empty structure

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "version": "0.0.1",
     "workspaces": {
         "packages": [
-            "packages/*"
+            "packages/*",
+            "docs"
         ]
     },
     "private": true,
