--- a/packages/deploy/package.json
+++ b/packages/deploy/package.json
@@ -15,13 +15,14 @@
     "homepage": "https://github.com/thesandboxgame/sandbox-smart-contracts#readme",
     "private": true,
     "dependencies": {
-        "@sandbox-smart-contracts/asset": "*",
         "@sandbox-smart-contracts/core": "*",
         "@sandbox-smart-contracts/dependency-operator-filter": "*",
         "@sandbox-smart-contracts/dependency-royalty-management": "*",
         "@sandbox-smart-contracts/faucets": "0.0.1",
         "@sandbox-smart-contracts/giveaway": "0.0.3",
-        "@sandbox-smart-contracts/marketplace": "*"
+        "@sandbox-smart-contracts/marketplace": "*",
+        "asset-1.0.2": "npm:@sandbox-smart-contracts/asset@1.0.2",
+        "asset-latest": "npm:@sandbox-smart-contracts/asset@1.0.2"
     },
     "files": [
         "deployments"
