--- a/packages/deploy/package.json
+++ b/packages/deploy/package.json
@@ -47,6 +47,8 @@
         "@nomicfoundation/hardhat-chai-matchers": "1",
         "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
         "@nomiclabs/hardhat-ethers": "^2.2.3",
+        "@openzeppelin/defender-sdk": "^1.5.0",
+        "@openzeppelin/defender-sdk-deploy-client": "^1.5.0",
         "@typechain/ethers-v5": "^11.0.0",
         "@typechain/hardhat": "^8.0.0",
         "@types/chai": "^4.3.5",
