chore: use v1.0.1 of marketplace on deploy

--- a/packages/deploy/package.json
+++ b/packages/deploy/package.json
@@ -21,7 +21,7 @@
         "@sandbox-smart-contracts/dependency-royalty-management": "*",
         "@sandbox-smart-contracts/faucets": "0.0.1",
         "@sandbox-smart-contracts/giveaway": "0.0.3",
-        "@sandbox-smart-contracts/marketplace": "*"
+        "@sandbox-smart-contracts/marketplace": "1.0.1"
     },
     "files": [
         "deployments"
