--- a/packages/deploy/package.json
+++ b/packages/deploy/package.json
@@ -15,14 +15,14 @@
     "homepage": "https://github.com/thesandboxgame/sandbox-smart-contracts#readme",
     "private": true,
     "dependencies": {
+        "@sandbox-smart-contracts/asset": "*",
+        "@sandbox-smart-contracts/asset-1.0.2": "npm:@sandbox-smart-contracts/asset@1.0.2",
         "@sandbox-smart-contracts/core": "*",
         "@sandbox-smart-contracts/dependency-operator-filter": "*",
         "@sandbox-smart-contracts/dependency-royalty-management": "*",
         "@sandbox-smart-contracts/faucets": "0.0.1",
         "@sandbox-smart-contracts/giveaway": "0.0.3",
-        "@sandbox-smart-contracts/marketplace": "*",
-        "asset-1.0.2": "npm:@sandbox-smart-contracts/asset@1.0.2",
-        "asset-latest": "npm:@sandbox-smart-contracts/asset@1.0.2"
+        "@sandbox-smart-contracts/marketplace": "*"
     },
     "files": [
         "deployments"
@@ -46,8 +46,11 @@
         "@ethersproject/abi": "^5.7.0",
         "@ethersproject/providers": "^5.7.2",
         "@nomicfoundation/hardhat-chai-matchers": "1",
+        "@nomicfoundation/hardhat-ethers": "^3.0.0",
         "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
-        "@nomiclabs/hardhat-ethers": "^2.2.3",
+        "@nomicfoundation/hardhat-verify": "^2.0.1",
+        "@nomiclabs/hardhat-ethers": "^2.0.0",
+        "@openzeppelin/hardhat-upgrades": "^2.4.3",
         "@typechain/ethers-v5": "^11.0.0",
         "@typechain/hardhat": "^8.0.0",
         "@types/chai": "^4.3.5",
