--- a/packages/asset/package.json
+++ b/packages/asset/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@sandbox-smart-contracts/asset",
   "version": "1.0.2",
-  "description": "Asset and Catalyst L2 smart contracts",
+  "description": "Asset and Catalyst L2 smart contracts for Polygon",
   "license": "MIT",
   "main": "index.js",
   "files": [
