--- a/packages/deploy/package.json
+++ b/packages/deploy/package.json
@@ -45,7 +45,7 @@
         "@ethersproject/abi": "^5.7.0",
         "@ethersproject/providers": "^5.7.2",
         "@nomicfoundation/hardhat-chai-matchers": "1",
-        "@nomicfoundation/hardhat-ethers": "^3.0.0",
+        "@nomicfoundation/hardhat-ethers": "npm:@nomiclabs/hardhat-ethers@2.2.3",
         "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
         "@nomicfoundation/hardhat-verify": "^1.1.0",
         "@nomiclabs/hardhat-ethers": "^2.2.3",
