--- a/packages/land/package.json
+++ b/packages/land/package.json
@@ -36,6 +36,7 @@
     "@openzeppelin/contracts-upgradeable": "^4.9.5",
     "@typechain/ethers-v6": "^0.5.1",
     "@typechain/hardhat": "^9.1.0",
+    "@types/chai": "^4.3.11",
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.10.4",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
