--- a/packages/deploy/package.json
+++ b/packages/deploy/package.json
@@ -45,9 +45,12 @@
   "devDependencies": {
     "@ethersproject/abi": "^5.7.0",
     "@ethersproject/providers": "^5.7.2",
-    "@nomicfoundation/hardhat-chai-matchers": "1",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.3",
+    "@nomicfoundation/hardhat-ethers": "^3.0.5",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
-    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@nomicfoundation/hardhat-verify": "^1.1.0",
+    "@openzeppelin/hardhat-upgrades": "^2.5.0",
+    "@openzeppelin/upgrades-core": "^1.32.3",
     "@typechain/ethers-v5": "^11.0.0",
     "@typechain/hardhat": "^8.0.0",
     "@types/chai": "^4.3.5",
@@ -67,10 +70,11 @@
     "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-mocha": "^10.1.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "ethers": "5",
+    "ethers": "^6.10.0",
     "hardhat": "^2.19.0",
     "hardhat-contract-sizer": "^2.10.0",
     "hardhat-deploy": "^0.11.43",
+    "hardhat-deploy-ethers": "^0.4.1",
     "prettier": "^2.8.8",
     "prettier-plugin-solidity": "^1.1.3",
     "ts-node": "^10.9.1",
