--- a/packages/land/package.json
+++ b/packages/land/package.json
@@ -33,6 +33,7 @@
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.2",
     "@nomiclabs/hardhat-etherscan": "^3.1.7",
+    "@openzeppelin/contracts": "5.0.0",
     "@openzeppelin/contracts-upgradeable": "^4.9.5",
     "@typechain/ethers-v6": "^0.5.1",
     "@typechain/hardhat": "^9.1.0",
