--- a/packages/land/package.json
+++ b/packages/land/package.json
@@ -57,6 +57,7 @@
     "@nomiclabs/hardhat-etherscan": "^3.1.7",
     "@openzeppelin/contracts-upgradeable": "^4.9.5",
     "@release-it/keep-a-changelog": "^5.0.0",
+    "@openzeppelin/hardhat-upgrades": "^3.0.2",
     "@typechain/ethers-v6": "^0.5.1",
     "@typechain/hardhat": "^9.1.0",
     "@types/chai": "^4.3.11",
