--- a/packages/land/package.json
+++ b/packages/land/package.json
@@ -48,6 +48,7 @@
   },
   "dependencies": {
     "@manifoldxyz/royalty-registry-solidity": "^2.0.3",
+    "@sandbox-smart-contracts/dependency-metatx": "1.0.1",
     "@sandbox-smart-contracts/dependency-royalty-management": "1.0.2"
   },
   "devDependencies": {
