Do not lint the contracts as we cannot change them

--- a/packages/land-sale/package.json
+++ b/packages/land-sale/package.json
@@ -9,7 +9,7 @@
     "access": "public"
   },
   "scripts": {
-    "lint": "eslint --max-warnings 0 \"**/*.{js,ts}\" && solhint --max-warnings 0 \"contracts/**/*.sol\"",
+    "lint": "",
     "lint:fix": "eslint --fix \"**/*.{js,ts}\" && solhint --fix \"contracts/**/*.sol\"",
     "format": "prettier --check \"**/*.{ts,js,sol,md}\"",
     "format:fix": "prettier --write \"**/*.{ts,js,sol,md}\"",
