--- a/packages/core/.env.example
+++ b/packages/core/.env.example
@@ -14,6 +14,12 @@ MNEMONIC_GOERLI=xxxxxxxxxxxxxxxxxxxxxx
 # seed-phrase for the wallet to use on mumbai
 MNEMONIC_MUMBAI=xxxxxxxxxxxxxxxxxxxxxx
 
+# seed-phrase for the wallet to use on sepolia
+MNEMONIC_SEPOLIA=xxxxxxxxxxxxxxxxxxxxxx
+
+# seed-phrase for the wallet to use on amoy
+MNEMONIC_AMOY=xxxxxxxxxxxxxxxxxxxxxx
+
 # mainnet provider URI
 ETH_NODE_URI_MAINNET=xxxxxxxxxxxxxxxxxxxxxx
 
@@ -25,6 +31,12 @@ ETH_NODE_URI_GOERLI=xxxxxxxxxxxxxxxxxxxxxx
 
 # goerli provider URI
 ETH_NODE_URI_MUMBAI=xxxxxxxxxxxxxxxxxxxxxx
+
+# sepolia provider URI
+ETH_NODE_URI_SEPOLIA=xxxxxxxxxxxxxxxxxxxxxx
+
+# amoy provider URI
+ETH_NODE_URI_AMOY=xxxxxxxxxxxxxxxxxxxxxx
 
 # provider URI for testnets
 ETH_NODE_URI=xxxxxxxxxxxxxxxxxxxxxx
@@ -38,6 +50,8 @@ ETHERSCAN_API_KEY_RINKEBY=xxxxxxxxxxxxxxxxxxxxxx
 ETHERSCAN_API_KEY_GOERLI=xxxxxxxxxxxxxxxxxxxxxx
 ETHERSCAN_API_KEY_POLYGON=xxxxxxxxxxxxxxxxxxxxxx
 ETHERSCAN_API_KEY_MUMBAI=xxxxxxxxxxxxxxxxxxxxxx
+ETHERSCAN_API_KEY_SEPOLIA=xxxxxxxxxxxxxxxxxxxxxx
+ETHERSCAN_API_KEY_AMOY=xxxxxxxxxxxxxxxxxxxxxx
 
 # Options to increase Node process memory (useful when running yarn coverage for example on some machine)
 NODE_OPTIONS=--max-old-space-size=8192
