add: skeleton files for example 404 contracts

--- a/packages/deploy/package.json
+++ b/packages/deploy/package.json
@@ -20,6 +20,7 @@
     "@sandbox-smart-contracts/core": "*",
     "@sandbox-smart-contracts/dependency-operator-filter": "1.0.1",
     "@sandbox-smart-contracts/dependency-royalty-management": "1.0.2",
+    "@sandbox-smart-contracts/dn404": "*",
     "@sandbox-smart-contracts/faucets": "0.0.1",
     "@sandbox-smart-contracts/giveaway": "0.0.3",
     "@sandbox-smart-contracts/marketplace": "1.0.1"
