--- a/packages/avatar/package.json
+++ b/packages/avatar/package.json
@@ -14,7 +14,8 @@
     "test": "hardhat test",
     "coverage": "hardhat coverage --testfiles 'test/*.ts''test/*.js'",
     "hardhat": "hardhat",
-    "compile": "hardhat compile"
+    "compile": "hardhat compile",
+    "release": "release-it"
   },
   "keywords": [
     "polygon",
@@ -30,6 +31,25 @@
       "test/**/*.ts"
     ]
   },
+  "release-it": {
+    "git": {
+      "commitMessage": "chore: @sandbox-smart-contracts/avatar release v${version}",
+      "tagAnnotation": "@sandbox-smart-contracts/avatar release v${version}",
+      "tagName": "@sandbox-smart-contracts/avatar@v${version}"
+    },
+    "plugins": {
+      "@release-it/keep-a-changelog": {}
+    },
+    "hooks": {
+      "before:init": [
+        "yarn lint",
+        "yarn test"
+      ]
+    }
+  },
+  "publishConfig": {
+    "access": "public"
+  },  
   "devDependencies": {
     "@ethersproject/abi": "^5.7.0",
     "@ethersproject/providers": "^5.7.2",
@@ -45,6 +65,7 @@
     "@openzeppelin/contracts-0.8.15": "npm:@openzeppelin/contracts@4.8.3",
     "@openzeppelin/contracts-upgradeable": "^4.9.2",
     "@openzeppelin/contracts-upgradeable-0.8.13": "npm:@openzeppelin/contracts-upgradeable@4.8.0",
+    "@release-it/keep-a-changelog": "^5.0.0",
     "@sandbox-smart-contracts/core": "0.0.1",
     "@typechain/ethers-v6": "^0.4.0",
     "@typechain/hardhat": "^8.0.0",
@@ -63,6 +84,7 @@
     "hardhat-gas-reporter": "^1.0.9",
     "prettier": "^2.8.8",
     "prettier-plugin-solidity": "^1.1.3",
+    "release-it": "^17.1.1",
     "solhint": "^3.4.1",
     "solhint-plugin-prettier": "^0.0.5",
     "solidity-coverage": "^0.8.3",
