--- a/packages/land/package.json
+++ b/packages/land/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sandbox-smart-contracts/land",
-  "version": "0.0.3",
+  "version": "1.0.0-rc.0",
   "description": "Land smart contract",
   "files": [
     "contracts",
