--- a/packages/oft-sand/package.json
+++ b/packages/oft-sand/package.json
@@ -47,10 +47,11 @@
     }
   },
   "dependencies": {
+    "@layerzerolabs/lz-evm-messagelib-v2": "^2.3.11",
     "@layerzerolabs/lz-evm-oapp-v2": "^2.3.8",
     "@layerzerolabs/lz-evm-protocol-v2": "^2.3.8",
-    "@openzeppelin/contracts": "5.0.2",
-    "@openzeppelin/contracts-upgradeable": "5.0.2"
+    "@layerzerolabs/lz-v2-utilities": "^2.3.11",
+    "@layerzerolabs/test-devtools-evm-hardhat": "^0.2.3"
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.7.0",
@@ -61,6 +62,8 @@
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.2",
     "@nomiclabs/hardhat-etherscan": "^3.1.7",
+    "@openzeppelin/contracts": "5.0.2",
+    "@openzeppelin/contracts-upgradeable": "5.0.2",
     "@openzeppelin/hardhat-upgrades": "^3.0.2",
     "@release-it/keep-a-changelog": "^5.0.0",
     "@typechain/ethers-v6": "^0.5.1",
@@ -85,6 +88,7 @@
     "release-it": "^17.0.3",
     "solhint": "^4.0.0",
     "solhint-plugin-prettier": "^0.1.0",
+    "solidity-bytes-utils": "^0.8.2",
     "solidity-coverage": "^0.8.5",
     "ts-node": "^10.9.2",
     "typechain": "^8.3.2",
