feat: added oft-sand integration test

--- a/packages/deploy/tsconfig.json
+++ b/packages/deploy/tsconfig.json
@@ -13,6 +13,7 @@
     "./typechain-types",
     "./deploy",
     "./deploy_mocks",
+    "./integration_test",
     "./utils",
     "./tasks",
     "./test"
