--- a/packages/oft-sand/package.json
+++ b/packages/oft-sand/package.json
@@ -51,7 +51,8 @@
     "@layerzerolabs/lz-evm-oapp-v2": "^2.3.8",
     "@layerzerolabs/lz-evm-protocol-v2": "^2.3.8",
     "@layerzerolabs/lz-v2-utilities": "^2.3.11",
-    "@layerzerolabs/test-devtools-evm-hardhat": "^0.2.3"
+    "@layerzerolabs/test-devtools-evm-hardhat": "^0.2.3",
+    "@sandbox-smart-contracts/dependency-metatx": "1.0.1"
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.7.0",
