warn when network uri is missing
Instead of asking for all the uris in the .env file warn for those that
are missing.

--- a/packages/deploy/.env.example
+++ b/packages/deploy/.env.example
@@ -1,42 +1,17 @@
 # seed-phrase for the wallet to use on default network
-# this is required for local testing otherwise hardhat will throw "Invalid mnemonic"
+# this is required for local testing, default is: test test test test test test test test test test test junk
 MNEMONIC=xxxxxxxxxxxxxxxxxxxxxx
 
-# seed-phrase for the wallet to use on mainnet
-MNEMONIC_MAINNET=xxxxxxxxxxxxxxxxxxxxxx
-
-# seed-phrase for the wallet to use on goerli
-MNEMONIC_GOERLI=xxxxxxxxxxxxxxxxxxxxxx
-
-# seed-phrase for the wallet to use on mumbai
-MNEMONIC_MUMBAI=xxxxxxxxxxxxxxxxxxxxxx
+# For each networks you must setup a set of vars.
+# For example for mainnet:
 
 # mainnet provider URI
 ETH_NODE_URI_MAINNET=xxxxxxxxxxxxxxxxxxxxxx
-
-# goerli provider URI
-ETH_NODE_URI_GOERLI=xxxxxxxxxxxxxxxxxxxxxx
-
-# goerli provider URI
-ETH_NODE_URI_MUMBAI=xxxxxxxxxxxxxxxxxxxxxx
-
-# provider URI for testnets
-ETH_NODE_URI=xxxxxxxxxxxxxxxxxxxxxx
-
-# polygon provider URI
-ETH_NODE_URI_POLYGON=xxxxxxxxxxxxxxxxxxxxxx
-
+# seed-phrase for the wallet to use on mainnet (optional)
+MNEMONIC_MAINNET=xxxxxxxxxxxxxxxxxxxxxx
 # API key for etherscan verification
 ETHERSCAN_API_KEY_MAINNET=xxxxxxxxxxxxxxxxxxxxxx
-ETHERSCAN_API_KEY_GOERLI=xxxxxxxxxxxxxxxxxxxxxx
-ETHERSCAN_API_KEY_POLYGON=xxxxxxxxxxxxxxxxxxxxxx
-ETHERSCAN_API_KEY_MUMBAI=xxxxxxxxxxxxxxxxxxxxxx
+
 
 # Options to increase Node process memory (useful when running yarn coverage for example on some machine)
 NODE_OPTIONS=--max-old-space-size=8192
-
-INFURA_HTTP_BLOCK_QUERY_LIMIT=1000
-
-# THE GRAPH URL
-CLAIMS_GRAPH_URL_MUMBAI=xxxxxxxxxxxxxxxxxxxxxx
-CLAIMS_GRAPH_URL_POLYGON=xxxxxxxxxxxxxxxxxxxxxx
