fix: updated oft-sand setup scripts

--- a/packages/deploy/.env.example
+++ b/packages/deploy/.env.example
@@ -17,7 +17,10 @@ ETH_NODE_URI_MAINNET=xxxxxxxxxxxxxxxxxxxxxx
 # goerli provider URI
 ETH_NODE_URI_GOERLI=xxxxxxxxxxxxxxxxxxxxxx
 
-# goerli provider URI
+# sepolia provider URI
+ETH_NODE_URI_SEPOLIA=xxxxxxxxxxxxxxxxxxxxxx
+
+# mumbai provider URI
 ETH_NODE_URI_MUMBAI=xxxxxxxxxxxxxxxxxxxxxx
 
 # provider URI for testnets
@@ -26,11 +29,36 @@ ETH_NODE_URI=xxxxxxxxxxxxxxxxxxxxxx
 # polygon provider URI
 ETH_NODE_URI_POLYGON=xxxxxxxxxxxxxxxxxxxxxx
 
+# base provider URI
+ETH_NODE_URI_BASE=xxxxxxxxxxxxxxxxxxxxxx
+
+# baseSepolia provider URI
+ETH_NODE_URI_BASESEPOLIA=xxxxxxxxxxxxxxxxxxxxxx
+
+# bscMainnet provider URI
+ETH_NODE_URI_BSCMAINNET=xxxxxxxxxxxxxxxxxxxxxx
+
+# bscTestnet provider URI
+ETH_NODE_URI_BSCTESTNET=xxxxxxxxxxxxxxxxxxxxxx
+
 # API key for etherscan verification
 ETHERSCAN_API_KEY_MAINNET=xxxxxxxxxxxxxxxxxxxxxx
 ETHERSCAN_API_KEY_GOERLI=xxxxxxxxxxxxxxxxxxxxxx
+ETHERSCAN_API_KEY_SEPOLIA=
 ETHERSCAN_API_KEY_POLYGON=xxxxxxxxxxxxxxxxxxxxxx
 ETHERSCAN_API_KEY_MUMBAI=xxxxxxxxxxxxxxxxxxxxxx
+ETHERSCAN_API_KEY_BASE=xxxxxxxxxxxxxxxxxxxxxx
+ETHERSCAN_API_KEY_BASESEPOLIA=xxxxxxxxxxxxxxxxxxxxxx
+ETHERSCAN_API_KEY_BSCMAINNET=xxxxxxxxxxxxxxxxxxxxxx
+ETHERSCAN_API_KEY_BSCTESTNET=xxxxxxxxxxxxxxxxxxxxxx
+
+# LZ Endpoint
+EID_SEPOLIA=xxxxxxxxxxxxxxxxxxxxxx
+EID_MAINNET=xxxxxxxxxxxxxxxxxxxxxx
+EID_BASESEPOLIA=xxxxxxxxxxxxxxxxxxxxxx
+EID_BASE=xxxxxxxxxxxxxxxxxxxxxx
+EID_BSCTESTNET=xxxxxxxxxxxxxxxxxxxxxx
+EID_BSCMAINNET=xxxxxxxxxxxxxxxxxxxxxx
 
 # Options to increase Node process memory (useful when running yarn coverage for example on some machine)
 NODE_OPTIONS=--max-old-space-size=8192
