Add initial owner and deploy scropt

--- a/packages/deploy/package.json
+++ b/packages/deploy/package.json
@@ -24,7 +24,8 @@
     "@sandbox-smart-contracts/faucets": "0.0.1",
     "@sandbox-smart-contracts/giveaway": "0.0.3",
     "@sandbox-smart-contracts/land": "1.0.0-rc.1",
-    "@sandbox-smart-contracts/marketplace": "1.0.1"
+    "@sandbox-smart-contracts/marketplace": "1.0.1",
+    "@sandbox-smart-contracts/batch-transfers": "*"
   },
   "files": [
     "deployments"
