--- a/packages/avatar/package.json
+++ b/packages/avatar/package.json
@@ -14,6 +14,7 @@
     "test": "hardhat test",
     "coverage": "hardhat coverage --testfiles 'test/*.ts''test/*.js'",
     "hardhat": "hardhat",
+    "size": "yarn hardhat size-contracts",
     "compile": "hardhat compile",
     "release": "release-it"
   },
@@ -81,6 +82,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "ethers": "^6.7.1",
     "hardhat": "^2.14.1",
+    "hardhat-contract-sizer": "^2.10.0",
     "hardhat-gas-reporter": "^1.0.9",
     "prettier": "^2.8.8",
     "prettier-plugin-solidity": "^1.1.3",
