--- a/packages/avatar/package.json
+++ b/packages/avatar/package.json
@@ -61,11 +61,14 @@
     "@nomicfoundation/hardhat-verify": "^1.0.0",
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@0.3.0-beta.7",
     "@nomiclabs/hardhat-etherscan": "^3.1.7",
+    "@openzeppelin/contracts": "npm:@openzeppelin/contracts@5.0.2",
     "@openzeppelin/contracts-0.8": "npm:@openzeppelin/contracts@4.4.2",
     "@openzeppelin/contracts-0.8.13": "npm:@openzeppelin/contracts@4.8.0",
     "@openzeppelin/contracts-0.8.15": "npm:@openzeppelin/contracts@4.8.3",
+    "@openzeppelin/contracts-5.0.2": "npm:@openzeppelin/contracts@5.0.2",
     "@openzeppelin/contracts-upgradeable": "^4.9.2",
     "@openzeppelin/contracts-upgradeable-0.8.13": "npm:@openzeppelin/contracts-upgradeable@4.8.0",
+    "@openzeppelin/contracts-upgradeable-5.0.2": "npm:@openzeppelin/contracts-upgradeable@5.0.2",
     "@release-it/keep-a-changelog": "^5.0.0",
     "@typechain/ethers-v6": "^0.4.0",
     "@typechain/hardhat": "^8.0.0",
