--- a/packages/deploy/package.json
+++ b/packages/deploy/package.json
@@ -25,6 +25,7 @@
     "@sandbox-smart-contracts/faucets": "0.0.1",
     "@sandbox-smart-contracts/giveaway": "0.0.3",
     "@sandbox-smart-contracts/land": "1.0.0-rc.1",
+    "@sandbox-smart-contracts/land-sale": "1.0.0-rc.1",
     "@sandbox-smart-contracts/marketplace": "1.0.2",
     "@sandbox-smart-contracts/marketplace@1.0.1": "npm:@sandbox-smart-contracts/marketplace@1.0.1",
     "@sandbox-smart-contracts/oft-sand": "0.0.1"
