--- a/packages/land-sale/package.json
+++ b/packages/land-sale/package.json
@@ -72,6 +72,7 @@
     "@openzeppelin/contracts-upgradeable": "^4.9.5",
     "@sandbox-smart-contracts/core": "^0.0.1",
     "@urql/core": "^4.2.3",
+    "dotenv": "^16.4.5",
     "fs-extra": "^11.2.0",
     "hardhat-deploy": "^0.11.45",
     "isomorphic-unfetch": "^4.0.2"
