feat: force node version >=20

--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
         "nx": "15.8.6",
         "rimraf": "^4.4.0"
     },
+    "engines": {
+        "node": ">=20.0.0"
+    },
     "keywords": [
         "ethereum",
         "polygon",
