--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -7,5 +7,7 @@ nodeLinker: node-modules
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
     spec: "@yarnpkg/plugin-typescript"
+  - path: .yarn/plugins/@yarnpkg/plugin-engines.cjs
+    spec: "https://raw.githubusercontent.com/devoto13/yarn-plugin-engines/main/bundles/%40yarnpkg/plugin-engines.js"
 
 yarnPath: .yarn/releases/yarn-3.6.0.cjs
