--- a/packages/game-passes/package.json
+++ b/packages/game-passes/package.json
@@ -6,7 +6,11 @@
     "contracts"
   ],
   "scripts": {
-    "test": "hardhat test"
+    "test": "hardhat test",
+    "lint": "eslint --max-warnings 0 \"**/*.{js,ts}\" && solhint --max-warnings 0 \"contracts/**/*.sol\"",
+    "lint:fix": "eslint --fix \"**/*.{js,ts}\" && solhint --fix \"contracts/**/*.sol\"",
+    "format": "prettier --check \"**/*.{ts,js}\"",
+    "format:fix": "prettier --write \"**/*.{ts,js}\""
   },
   "repository": {
     "type": "git",
