--- a/packages/deploy/package.json
+++ b/packages/deploy/package.json
@@ -53,12 +53,16 @@
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.7.0",
+    "@ethersproject/abstract-signer": "^5.8.0",
     "@ethersproject/bignumber": "^5.7.0",
+    "@ethersproject/hash": "^5.8.0",
     "@ethersproject/providers": "^5.7.2",
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.3",
     "@nomicfoundation/hardhat-ethers": "^3.0.5",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
     "@nomicfoundation/hardhat-verify": "^2.0.0",
+    "@openzeppelin/defender-sdk": "^2.5.0",
+    "@openzeppelin/defender-sdk-relay-signer-client": "^2.5.0",
     "@openzeppelin/hardhat-upgrades": "^2.5.0",
     "@openzeppelin/upgrades-core": "^1.32.3",
     "@typechain/ethers-v5": "^11.0.0",
@@ -73,6 +77,7 @@
     "chai": "^4.3.7",
     "child_process": "^1.0.2",
     "cross-env": "^7.0.3",
+    "csv-parser": "^3.2.0",
     "dotenv": "^16.4.5",
     "dotenv-cli": "^7.2.1",
     "eslint": "^8.43.0",
